feat: add swagger for carts & cart-items
